# AI-reels-generator

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
examples/: sample_run.md  sample_topics.txt
prompts/: scene_prompt.txt  script_prompt.txt
src/did_you_know_reels/: __init__.py  __main__.py  asset_manager.py  cli.py  config.py  fact_validator.py  logging_setup.py  metadata_generator.py  models.py  pipeline.py  prompt_builder.py  providers.py  report_writer.py  scene_planner.py  scoring.py  script_generator.py  subtitle_generator.py  topic_generator.py  utils.py  video_composer.py  voiceover_generator.py  wikipedia_client.py
tests/: test_config.py  test_fact_validator.py  test_metadata_generator.py  test_pipeline.py  test_provider_fallback.py  test_scene_planner.py  test_scoring.py  test_script_generator.py  test_voiceover_generator.py
