[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "did-you-know-reels-generator"
version = "0.1.0"
description = "CLI pipeline for generating original did-you-know short-form reels."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Codex" }
]
dependencies = [
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
openai = [
  "openai>=1.30.0",
]

[project.scripts]
did-you-know-reels = "did_you_know_reels.cli:main"

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
testpaths = [
  "tests",
]

[tool.setuptools.packages.find]
where = ["src"]
